--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,12 @@
       <version>1</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.25</version>
+    </dependency>
+
   </dependencies>
 
 
