--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,29 @@
       <version>1.7.25</version>
     </dependency>
 
+    <!-- test dependencies -->
+
+    <dependency>
+      <groupId>io.kanuka</groupId>
+      <artifactId>kanuka-generator</artifactId>
+      <version>0.1-SNAPSHOT</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.avaje.composite</groupId>
+      <artifactId>logback</artifactId>
+      <version>1.1</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.avaje.composite</groupId>
+      <artifactId>junit</artifactId>
+      <version>1.1</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
 
