--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,11 @@
     <version>1.3</version>
   </parent>
 
+  <scm>
+    <developerConnection>scm:git:git@github.com:kanuka/kanuka.git</developerConnection>
+    <tag>HEAD</tag>
+  </scm>
+
   <dependencies>
 
     <dependency>
