--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.kanuka</groupId>
   <artifactId>kanuka</artifactId>
-  <version>0.1-SNAPSHOT</version>
+  <version>0.1</version>
 
   <parent>
     <groupId>org.avaje</groupId>
@@ -16,7 +14,7 @@
 
   <scm>
     <developerConnection>scm:git:git@github.com:kanuka/kanuka.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>kanuka-0.1</tag>
   </scm>
 
   <dependencies>
