--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>io.kanuka</groupId>
   <artifactId>kanuka</artifactId>
-  <version>0.1</version>
+  <version>0.2-SNAPSHOT</version>
 
   <parent>
     <groupId>org.avaje</groupId>
@@ -14,7 +14,7 @@
 
   <scm>
     <developerConnection>scm:git:git@github.com:kanuka/kanuka.git</developerConnection>
-    <tag>kanuka-0.1</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <dependencies>
