--- a/pom.xml
+++ b/pom.xml
@@ -33,12 +33,12 @@
 
     <!-- test dependencies -->
 
-    <!--<dependency>-->
-      <!--<groupId>io.kanuka</groupId>-->
-      <!--<artifactId>kanuka-generator</artifactId>-->
-      <!--<version>0.1-SNAPSHOT</version>-->
-      <!--<scope>test</scope>-->
-    <!--</dependency>-->
+    <dependency>
+      <groupId>io.kanuka</groupId>
+      <artifactId>kanuka-generator</artifactId>
+      <version>0.1</version>
+      <scope>test</scope>
+    </dependency>
 
     <dependency>
       <groupId>org.avaje.composite</groupId>
