--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
     <dependency>
       <groupId>io.kanuka</groupId>
       <artifactId>kanuka-generator</artifactId>
-      <version>0.1</version>
+      <version>0.2-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
 
