#23 - when using Lombok @Slf4j getting Argument passed to when() is not a mock

--- a/pom.xml
+++ b/pom.xml
@@ -41,9 +41,16 @@
     <!-- test dependencies -->
 
     <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.6</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
       <groupId>io.dinject</groupId>
       <artifactId>dinject-generator</artifactId>
-      <version>1.4</version>
+      <version>1.6</version>
       <scope>test</scope>
     </dependency>
 
