--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 
   <parent>
     <groupId>org.avaje</groupId>
-    <artifactId>java8-parent</artifactId>
-    <version>1.3</version>
+    <artifactId>java8-oss</artifactId>
+    <version>2.1</version>
   </parent>
 
   <scm>
@@ -56,7 +56,7 @@
     <dependency>
       <groupId>io.dinject</groupId>
       <artifactId>dinject-generator</artifactId>
-      <version>1.10</version>
+      <version>1.11</version>
       <scope>test</scope>
     </dependency>
 
