--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
     <dependency>
       <groupId>io.dinject</groupId>
       <artifactId>dinject-generator</artifactId>
-      <version>1.18-SNAPSHOT</version>
+      <version>1.18</version>
       <scope>test</scope>
     </dependency>
 
