--- a/core/pom.xml
+++ b/core/pom.xml
@@ -15,6 +15,12 @@
   <dependencies>
 
     <dependency>
+      <groupId>io.dinject</groupId>
+      <artifactId>dinject-annotations</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
       <groupId>javax.inject</groupId>
       <artifactId>javax.inject</artifactId>
       <version>1</version>
