--- a/core/pom.xml
+++ b/core/pom.xml
@@ -57,7 +57,7 @@
     <dependency>
       <groupId>io.dinject</groupId>
       <artifactId>dinject-generator</artifactId>
-      <version>1.19</version>
+      <version>${project.version}</version>
       <scope>test</scope>
     </dependency>
 
