--- a/core/pom.xml
+++ b/core/pom.xml
@@ -2,14 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>io.dinject</groupId>
   <artifactId>dinject</artifactId>
-  <version>1.20-beta-SNAPSHOT</version>
 
   <parent>
     <groupId>io.dinject</groupId>
     <artifactId>dinject-parent</artifactId>
-    <version>1.20-beta-SNAPSHOT</version>
+    <version>1.20-beta2-SNAPSHOT</version>
+    <relativePath>..</relativePath>
   </parent>
 
   <dependencies>
