--- a/generator/pom.xml
+++ b/generator/pom.xml
@@ -3,14 +3,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>io.dinject</groupId>
   <artifactId>dinject-generator</artifactId>
-  <version>1.20-beta-SNAPSHOT</version>
 
   <parent>
     <groupId>io.dinject</groupId>
     <artifactId>dinject-parent</artifactId>
-    <version>1.20-beta-SNAPSHOT</version>
+    <version>1.20-beta2-SNAPSHOT</version>
+    <relativePath>..</relativePath>
   </parent>
 
   <dependencies>
