--- a/generator/pom.xml
+++ b/generator/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>io.dinject</groupId>
     <artifactId>dinject-parent</artifactId>
-    <version>1.20-beta3-SNAPSHOT</version>
+    <version>2.1-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
 
