--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>io.dinject</groupId>
   <artifactId>dinject-parent</artifactId>
-  <version>1.20-beta3-SNAPSHOT</version>
+  <version>2.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <parent>
