Refactor add dinject-test module and move tests

--- a/generator/pom.xml
+++ b/generator/pom.xml
@@ -15,7 +15,7 @@
 
     <dependency>
       <groupId>io.dinject</groupId>
-      <artifactId>dinject-annotations</artifactId>
+      <artifactId>dinject</artifactId>
       <version>${project.version}</version>
     </dependency>
 
