--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <module>annotations</module>
     <module>generator</module>
     <module>core</module>
+    <module>dinject-test</module>
   </modules>
 </project>
 
