--- a/dinject-test/pom.xml
+++ b/dinject-test/pom.xml
@@ -9,8 +9,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>test</artifactId>
-
+  <artifactId>dinject-test</artifactId>
 
   <dependencies>
 
