--- a/dinject-test/pom.xml
+++ b/dinject-test/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>dinject-parent</artifactId>
     <groupId>io.dinject</groupId>
-    <version>2.2</version>
+    <version>2.3-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
