--- a/dinject/pom.xml
+++ b/dinject/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>io.dinject</groupId>
     <artifactId>dinject-parent</artifactId>
-    <version>2.2</version>
+    <version>2.3-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
 
