--- a/dinject-generator/pom.xml
+++ b/dinject-generator/pom.xml
@@ -2,14 +2,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <groupId>io.dinject</groupId>
   <artifactId>dinject-generator</artifactId>
+  <version>2.3-SNAPSHOT</version>
 
   <parent>
-    <groupId>io.dinject</groupId>
-    <artifactId>dinject-parent</artifactId>
-    <version>2.3-SNAPSHOT</version>
-    <relativePath>..</relativePath>
+    <groupId>org.avaje</groupId>
+    <artifactId>java8-oss</artifactId>
+    <version>2.1</version>
   </parent>
+
+  <scm>
+    <developerConnection>scm:git:git@github.com:dinject/dinject.git</developerConnection>
+    <tag>HEAD</tag>
+  </scm>
 
   <dependencies>
 
