--- a/dinject/pom.xml
+++ b/dinject/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>io.dinject</groupId>
   <artifactId>dinject</artifactId>
-  <version>2.3-SNAPSHOT</version>
+  <version>2.3</version>
 
   <parent>
     <groupId>org.avaje</groupId>
@@ -14,7 +14,7 @@
 
   <scm>
     <developerConnection>scm:git:git@github.com:dinject/dinject.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>dinject-2.3</tag>
   </scm>
 
   <properties>
