--- a/dinject-generator/pom.xml
+++ b/dinject-generator/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>io.dinject</groupId>
-  <artifactId>dinject-generator</artifactId>
-  <version>2.4-SNAPSHOT</version>
+  <groupId>io.avaje</groupId>
+  <artifactId>avaje-inject-generator</artifactId>
+  <version>0.1-SNAPSHOT</version>
 
   <parent>
     <groupId>org.avaje</groupId>
@@ -18,15 +18,15 @@
   </scm>
 
   <properties>
-    <dinject.version>2.3</dinject.version>
+    <dinject.version>0.1-SNAPSHOT</dinject.version>
   </properties>
 
   <dependencies>
 
     <dependency>
-      <groupId>io.dinject</groupId>
-      <artifactId>dinject</artifactId>
-      <version>${dinject.version}</version>
+      <groupId>io.avaje</groupId>
+      <artifactId>avaje-inject</artifactId>
+      <version>0.1-SNAPSHOT</version>
     </dependency>
 
     <dependency>
