Move adjust test dependency to http-api

--- a/inject-test/pom.xml
+++ b/inject-test/pom.xml
@@ -31,7 +31,7 @@
     <dependency>
       <groupId>io.avaje</groupId>
       <artifactId>avaje-http-api</artifactId>
-      <version>0.1-SNAPSHOT</version>
+      <version>0.1</version>
       <scope>provided</scope>
     </dependency>
 
