--- a/inject-test/pom.xml
+++ b/inject-test/pom.xml
@@ -12,18 +12,22 @@
     <version>2.1</version>
   </parent>
 
+  <properties>
+    <inject.version>0.9-SNAPSHOT</inject.version>
+  </properties>
+
   <dependencies>
 
     <dependency>
       <groupId>io.avaje</groupId>
       <artifactId>avaje-inject</artifactId>
-      <version>0.1-SNAPSHOT</version>
+      <version>${inject.version}</version>
     </dependency>
 
     <dependency>
       <groupId>io.avaje</groupId>
       <artifactId>avaje-inject-generator</artifactId>
-      <version>0.1-SNAPSHOT</version>
+      <version>${inject.version}</version>
       <scope>provided</scope>
     </dependency>
 
@@ -62,7 +66,6 @@
       <version>1.18.6</version>
       <scope>test</scope>
     </dependency>
-
 
     <dependency>
       <groupId>org.avaje.composite</groupId>
