--- a/inject-generator/pom.xml
+++ b/inject-generator/pom.xml
@@ -18,7 +18,7 @@
   </scm>
 
   <properties>
-    <inject.version>0.9-SNAPSHOT</inject.version>
+    <inject.version>0.9</inject.version>
   </properties>
 
   <dependencies>
