--- a/inject-generator/pom.xml
+++ b/inject-generator/pom.xml
@@ -4,21 +4,21 @@
 
   <groupId>io.avaje</groupId>
   <artifactId>avaje-inject-generator</artifactId>
-  <version>0.10-SNAPSHOT</version>
+  <version>1.0-SNAPSHOT</version>
 
   <parent>
     <groupId>org.avaje</groupId>
     <artifactId>java8-oss</artifactId>
-    <version>2.1</version>
+    <version>2.2</version>
   </parent>
 
   <scm>
-    <developerConnection>scm:git:git@github.com:dinject/dinject.git</developerConnection>
+    <developerConnection>scm:git:git@github.com:avaje/avaje-inject.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
 
   <properties>
-    <inject.version>0.10-SNAPSHOT</inject.version>
+    <inject.version>1.0-SNAPSHOT</inject.version>
   </properties>
 
   <dependencies>
@@ -45,7 +45,7 @@
     <dependency>
       <groupId>org.avaje.composite</groupId>
       <artifactId>junit</artifactId>
-      <version>1.1</version>
+      <version>5.0</version>
       <scope>test</scope>
     </dependency>
 
