--- a/inject/pom.xml
+++ b/inject/pom.xml
@@ -4,16 +4,16 @@
 
   <groupId>io.avaje</groupId>
   <artifactId>avaje-inject</artifactId>
-  <version>0.10-SNAPSHOT</version>
+  <version>1.0-SNAPSHOT</version>
 
   <parent>
     <groupId>org.avaje</groupId>
     <artifactId>java8-oss</artifactId>
-    <version>2.1</version>
+    <version>2.2</version>
   </parent>
 
   <scm>
-    <developerConnection>scm:git:git@github.com:dinject/dinject.git</developerConnection>
+    <developerConnection>scm:git:git@github.com:avaje/avaje-inject.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
 
@@ -45,21 +45,21 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
       <version>2.23.4</version>
-      <scope>provided</scope>
+      <optional>true</optional>
     </dependency>
 
     <!-- test dependencies -->
 
     <dependency>
       <groupId>org.avaje.composite</groupId>
-      <artifactId>logback</artifactId>
-      <version>1.1</version>
+      <artifactId>junit</artifactId>
+      <version>5.0</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>org.avaje.composite</groupId>
-      <artifactId>junit</artifactId>
+      <artifactId>logback</artifactId>
       <version>1.1</version>
       <scope>test</scope>
     </dependency>
