--- a/inject/pom.xml
+++ b/inject/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>io.avaje</groupId>
   <artifactId>avaje-inject</artifactId>
-  <version>1.1-SNAPSHOT</version>
+  <version>1.1</version>
 
   <parent>
     <groupId>org.avaje</groupId>
@@ -14,7 +14,7 @@
 
   <scm>
     <developerConnection>scm:git:git@github.com:avaje/avaje-inject.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>avaje-inject-1.1</tag>
   </scm>
 
   <properties>
