#54 - Add support for request scope injection for Jex Context

--- a/inject-test/pom.xml
+++ b/inject-test/pom.xml
@@ -40,6 +40,13 @@
     </dependency>
 
     <dependency>
+      <groupId>io.avaje</groupId>
+      <artifactId>avaje-jex</artifactId>
+      <version>0.1</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
       <groupId>io.javalin</groupId>
       <artifactId>javalin</artifactId>
       <version>3.9.1</version>
