#61 - Refactor to use maven multi-module release

--- a/inject-test/pom.xml
+++ b/inject-test/pom.xml
@@ -1,33 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
-  <groupId>io.avaje</groupId>
-  <artifactId>avaje-inject-test</artifactId>
-  <version>1</version>
-
   <parent>
-    <groupId>org.avaje</groupId>
-    <artifactId>java8-oss</artifactId>
-    <version>2.2</version>
+    <groupId>io.avaje</groupId>
+    <artifactId>avaje-inject-parent</artifactId>
+    <version>1.5-SNAPSHOT</version>
   </parent>
 
-  <properties>
-    <inject.version>1.4-SNAPSHOT</inject.version>
-  </properties>
+  <artifactId>avaje-inject-test</artifactId>
 
   <dependencies>
 
     <dependency>
       <groupId>io.avaje</groupId>
       <artifactId>avaje-inject</artifactId>
-      <version>${inject.version}</version>
+      <version>${project.version}</version>
     </dependency>
 
     <dependency>
       <groupId>io.avaje</groupId>
       <artifactId>avaje-inject-generator</artifactId>
-      <version>${inject.version}</version>
+      <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
 
