--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.avaje</groupId>
+    <artifactId>java8-oss</artifactId>
+    <version>2.2</version>
+  </parent>
 
   <groupId>io.avaje</groupId>
   <artifactId>avaje-inject-parent</artifactId>
-  <version>1</version>
+  <version>1.5-SNAPSHOT</version>
   <packaging>pom</packaging>
+  <name>avaje inject parent</name>
+  <description>parent pom for avaje inject library</description>
+
+  <scm>
+    <developerConnection>scm:git:git@github.com:avaje/avaje-inject.git</developerConnection>
+    <tag>HEAD</tag>
+  </scm>
 
   <modules>
     <module>inject</module>
