Include inject-test after release to central

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
   <modules>
     <module>inject</module>
     <module>inject-generator</module>
-<!--    <module>inject-test</module>-->
+    <module>inject-test</module>
   </modules>
 </project>
 
