#100 - Support Optional<T> as result type of @Bean methods. Support Optional<T> and @Nullable for injection

--- a/inject-test/pom.xml
+++ b/inject-test/pom.xml
@@ -46,6 +46,13 @@
     </dependency>
 
     <dependency>
+      <groupId>io.avaje</groupId>
+      <artifactId>avaje-jsr305</artifactId>
+      <version>1.0</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
       <groupId>io.javalin</groupId>
       <artifactId>javalin</artifactId>
       <version>3.9.1</version>
