--- a/inject/pom.xml
+++ b/inject/pom.xml
@@ -59,6 +59,26 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>3.2.0</version>
+        <configuration>
+          <source>15</source>
+          <doclint>none</doclint>
+          <show>public</show>
+          <linksource>true</linksource>
+          <overview>src/main/javadoc/overview.html</overview>
+        </configuration>
+        <executions>
+          <execution>
+            <id>attach-javadocs</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
         <groupId>org.moditect</groupId>
         <artifactId>moditect-maven-plugin</artifactId>
         <version>1.0.0.RC1</version>
