--- a/inject-test/pom.xml
+++ b/inject-test/pom.xml
@@ -111,9 +111,9 @@
     </dependency>
 
     <dependency>
-      <groupId>org.avaje.composite</groupId>
+      <groupId>io.avaje</groupId>
       <artifactId>junit</artifactId>
-      <version>5.0</version>
+      <version>1.0</version>
       <scope>test</scope>
     </dependency>
 
