Change the GH WF, add mvn --version
Will tell us the java and maven version numbers used by the build

--- a/.github/workflows/jdk-ea.yml
+++ b/.github/workflows/jdk-ea.yml
@@ -34,6 +34,8 @@ jobs:
         path:
           ~/.m2
         key: build-${{ env.cache-name }}
+    - name: Maven version
+      run: mvn --version
     - name: Build with Maven
       run: mvn package
 
