--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,5 +30,7 @@ jobs:
         path:
           ~/.m2
         key: build-${{ env.cache-name }}
+    - name: Maven version
+      run: mvn --version
     - name: Build with Maven
       run: mvn clean test
