--- a/inject-maven-plugin/pom.xml
+++ b/inject-maven-plugin/pom.xml
@@ -8,10 +8,9 @@
   </parent>
 
   <groupId>io.avaje</groupId>
-  <artifactId>auto-require-plugin</artifactId>
+  <artifactId>avaje-inject-maven-plugin</artifactId>
   <packaging>maven-plugin</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>avaje-autorequire-plugin Maven Mojo</name>
 
   <dependencies>
     <dependency>
@@ -56,7 +55,7 @@
         <artifactId>maven-plugin-plugin</artifactId>
         <version>3.7.1</version>
         <configuration>
-          <goalPrefix>load-spi</goalPrefix>
+          <goalPrefix>provides</goalPrefix>
         </configuration>
       </plugin>
     </plugins>
