--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
         <activeByDefault>true</activeByDefault>
       </activation>
       <modules>
-        <module>auto-requires-plugin</module>
+        <module>inject-maven-plugin</module>
         <module>blackbox-other</module>
         <module>blackbox-aspect</module>
         <module>blackbox-test-inject</module>
