Move prisms to new module

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 
   <modules>
     <module>inject</module>
+    <module>inject-prism</module>
     <module>inject-generator</module>
     <module>inject-test</module>
   </modules>
