--- a/inject-generator/pom.xml
+++ b/inject-generator/pom.xml
@@ -17,18 +17,11 @@
 
     <dependency>
       <groupId>io.avaje</groupId>
-      <artifactId>avaje-inject</artifactId>
-      <version>8.12-RC4</version>
-      <!-- <optional>true</optional> -->
-      <scope>provided</scope>
+      <artifactId>avaje-inject-prism</artifactId>
+      <version>${project.version}</version>
     </dependency>
-<dependency>
-	<groupId>com.jolira</groupId>
-	<artifactId>hickory</artifactId>
-	<version>1.0.0</version>
-      <optional>true</optional>
-      <scope>provided</scope>
-</dependency>
+    
+
     <!-- test dependencies -->
     <dependency>
       <groupId>io.avaje</groupId>
@@ -65,6 +58,7 @@
       </plugin>
 
 
+<!--
 			<plugin>
 				<groupId>org.bsc.maven</groupId>
 				<artifactId>maven-processor-plugin</artifactId>
@@ -111,6 +105,7 @@
 					</execution>
 				</executions>
 			</plugin>
+			-->
     </plugins>
   </build>
 
