Switch to generating module-info for prisms

--- a/inject-prism/pom.xml
+++ b/inject-prism/pom.xml
@@ -8,6 +8,7 @@
   <artifactId>avaje-inject-prism</artifactId>
   <build>
     <plugins>
+    <!--
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
@@ -20,6 +21,41 @@
                   <Automatic-Module-Name>io.avaje.inject.prism</Automatic-Module-Name>
                 </manifestEntries>
               </archive>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      -->
+       <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <annotationProcessorPaths>
+            <annotationProcessorPath>
+              <groupId>com.jolira</groupId>
+              <artifactId>hickory</artifactId>
+              <version>1.0.0</version>
+            </annotationProcessorPath>
+          </annotationProcessorPaths>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.moditect</groupId>
+        <artifactId>moditect-maven-plugin</artifactId>
+        <version>1.0.0.RC2</version>
+        <executions>
+          <execution>
+            <id>add-module-infos</id>
+            <phase>package</phase>
+            <goals>
+              <goal>add-module-info</goal>
+            </goals>
+            <configuration>
+              <overwriteExistingFiles>true</overwriteExistingFiles>
+              <module>
+                <moduleInfoFile>
+                  src/main/java/module-info.moditect
+                </moduleInfoFile>
+              </module>
             </configuration>
           </execution>
         </executions>
